--- a/model.ipynb
+++ b/model.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -31,6 +17,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "luBtq4WYcSpD"
+      },
+      "outputs": [],
       "source": [
         "def createFeatures(group, i, day_ID=None):\n",
         "    feat = {\n",
@@ -67,15 +58,15 @@
         "            'TREND': np.mean(np.diff(prev_values[-5:])) if len(prev_values) >= 5 else 0\n",
         "        })\n",
         "    return feat"
-      ],
-      "metadata": {
-        "id": "luBtq4WYcSpD"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bG4yMBgxcVUR"
+      },
+      "outputs": [],
       "source": [
         "def extractData(group):\n",
         "    features = []\n",
@@ -83,15 +74,15 @@
         "        feat = createFeatures(group, i)\n",
         "        features.append(feat)\n",
         "    return pd.DataFrame(features)"
-      ],
-      "metadata": {
-        "id": "bG4yMBgxcVUR"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aVW0gktFcW7W"
+      },
+      "outputs": [],
       "source": [
         "filePair = [\n",
         "    ('A', 1), ('A', 2), ('A', 3), ('A', 4),\n",
@@ -99,15 +90,15 @@
         "    ('C', 1), ('C', 2), ('C', 3), ('C', 4),\n",
         "    ('D', 1), ('D', 2), ('D', 3), ('D', 4), ('D', 5)\n",
         "]"
-      ],
-      "metadata": {
-        "id": "aVW0gktFcW7W"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8zbX3GpNcX7E"
+      },
+      "outputs": [],
       "source": [
         "output_file = \"result.xlsx\"\n",
         "with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
@@ -129,11 +120,11 @@
         "        y = trainFeatures['Value']\n",
         "\n",
         "        model = RandomForestRegressor(\n",
-        "            n_estimators=100,\n",
-        "            max_depth=5,\n",
-        "            min_samples_leaf=4,\n",
+        "            n_estimators=90,\n",
+        "            max_depth=4,\n",
+        "            min_samples_leaf=5,\n",
         "            max_features='sqrt',\n",
-        "            random_state=42\n",
+        "            random_state=333\n",
         "        )\n",
         "        model.fit(X, y)\n",
         "\n",
@@ -167,15 +158,15 @@
         "\n",
         "        output_df = predictions[['Time Period', 'Value', 'Predicted']]\n",
         "        output_df.to_excel(writer, sheet_name=sheet_name, index=False)"
-      ],
-      "metadata": {
-        "id": "8zbX3GpNcX7E"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "LSWJS-KMcdS6"
+      },
+      "outputs": [],
       "source": [
         "import zipfile\n",
         "import os\n",
@@ -191,12 +182,21 @@
         "            zipf.write(file)\n",
         "\n",
         "files.download(zip)"
-      ],
-      "metadata": {
-        "id": "LSWJS-KMcdS6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
